--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -16,10 +16,17 @@ a {
 }
 
 .iconContainer {
-  width: 60%;
+  width: 20%;
   height: 20px;
-  padding: 20px 0;
+  padding: 30px 0;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
+}
+.instagram .fab {
+
+    background: #d6249f;
+    background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
